# xdb

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml
.direnv/: flake-profile-2-link  flake-profile-5-link
fuzz/: Cargo.toml
fuzz/fuzz_targets/: big_tree_deletes.rs  tree_ops.rs  tree_ops_u16.rs  tree_ops_u32.rs  tree_ops_u64.rs  tree_ops_u64_threaded.rs  tree_ops_u8.rs
scripts/: fuzz-minimize.bash  test-all.bash
src/: bplustree.rs  main.rs  page.rs  storage.rs
src/bplustree/: algorithms.rs  dot.rs  mod.rs
src/bplustree/node/: interior.rs  leaf.rs  mod.rs  storage.rs
src/storage/: in_memory.rs  mod.rs
xdb/: Cargo.toml
xdb-cli/: Cargo.toml
xdb-cli/src/: main.rs
xdb-client/: Cargo.toml
xdb-client/src/: main.rs
xdb-proc-macros/: Cargo.toml
xdb-proc-macros/src/: lib.rs
xdb-server/: Cargo.toml
xdb-server/src/: main.rs
xdb-shuttle/: Cargo.toml
xdb-shuttle/src/: lib.rs
xdb-tests/: Cargo.toml  log-1-panic.txt  log-1.txt  logx.txt
xdb-tests/src/: main.rs  random_single.rs  random_threaded.rs
xdb-tests/src/predictable/: mod.rs  single.rs  threaded.rs
xdb/benches/: reverse_delete.rs  sorted_insert.rs
xdb/src/: checksum.rs  debug.rs  lib.rs  page.rs  platform.rs
xdb/src/bplustree/: algorithms.rs  debug.rs  dot.rs  iterator.rs  mod.rs  transaction.rs  tuples.rs
xdb/src/bplustree/algorithms/: delete.rs  insert.rs  mod.rs
xdb/src/bplustree/node/: interior.rs  leaf.rs  mod.rs
xdb/src/bplustree/node/interior/: entries.rs  mod.rs
xdb/src/bplustree/node/leaf/: builder.rs  entries.rs  mod.rs
xdb/src/platform/: futex.rs  mod.rs
xdb/src/platform/allocation/: uncommitted.rs
xdb/src/platform/futex/: fake.rs  linux.rs  mod.rs
xdb/src/storage/: in_memory.rs  instrumented.rs  mod.rs  page.rs
xdb/src/storage/in_memory/: bitmap.rs  lock_manager.rs  mmaped_block.rs  mod.rs  transaction.rs  vacuum.rs
xdb/src/storage/in_memory/block/: mod.rs  page_state.rs  static_allocation.rs  uncommitted_allocation.rs
xdb/src/storage/in_memory/block/allocation/: mod.rs  static.rs  uncommitted.rs
xdb/src/storage/in_memory/lock_manager/: mod.rs  state.rs
xdb/src/storage/in_memory/version_manager/: committer.rs  mod.rs  recycled_pages.rs  transaction.rs  transaction_log.rs  vacuum.rs  versioned_page.rs
xdb/src/storage/in_memory/version_manager/vacuum/: mod.rs  scheduler.rs
