[package]
name = "xdb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"
pretty_assertions = "1.4.1"

[dependencies.xdb]
path = "../xdb/"

[[bin]]
name = "tree_ops"
path = "fuzz_targets/tree_ops.rs"
test = false
doc = false
bench = false
