[package]
name = "xdb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"
pretty_assertions = "1.4.1"
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics", "must_cast"] }

[dependencies.xdb]
path = "../xdb/"

[[bin]]
name = "tree_ops_u8"
path = "fuzz_targets/tree_ops_u8.rs"
test = false
doc = false
bench = false
[[bin]]
name = "tree_ops_u16"
path = "fuzz_targets/tree_ops_u16.rs"
test = false
doc = false
bench = false
[[bin]]
name = "tree_ops_u32"
path = "fuzz_targets/tree_ops_u32.rs"
test = false
doc = false
bench = false
[[bin]]
name = "tree_ops_u64"
path = "fuzz_targets/tree_ops_u64.rs"
test = false
doc = false
bench = false
[[bin]]
name = "tree_ops_u64_threaded"
path = "fuzz_targets/tree_ops_u64_threaded.rs"
test = false
doc = false
bench = false
