[package]
name = "xdb-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
xdb = {path="../xdb/"}
arbitrary = { version = "1.4.2", features = ["derive"] }
rand = "0.9.2"
log = "0.4.29"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
