[package]
name = "xdb-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
xdb = {path="../xdb/"}
arbitrary = { version = "1.4.2", features = ["derive"] }
rand = "0.9.2"
tracing = { version = "0.1.44", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
