[package]
name = "xdb-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
xdb = {path="../xdb/"}
arbitrary = { version = "1.4.2", features = ["derive"] }
rand = "0.9.2"
tracing = { version = "0.1.44", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.57", features = ["derive"] }
tracing-opentelemetry = "0.32.1"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic", "zstd-http"] }
opentelemetry = "0.31.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
