[package]
name = "xdb"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive", "latest_stable_rust", "min_const_generics", "must_cast"] }
crc32c = "0.6.8"
log = "0.4.29"
thiserror = "2.0.17"
pretty_assertions = "1.4.1"
libc = "0.2.180"
shuttle = { git = "https://github.com/awslabs/shuttle.git", branch="main", optional = true }

[dev-dependencies]
criterion = "0.8.1"
env_logger = "0.11.8"
tempfile = "3.24.0"

[features]
shuttle = ["dep:shuttle"]

[[bench]]
name = "sorted_insert"
harness = false

[[bench]]
name = "reverse_delete"
harness = false
